--- a/Scholarship (Firebase)/src/app/components/sidenav/sidenav.component.html
+++ b/Scholarship (Firebase)/src/app/components/sidenav/sidenav.component.html
@@ -17,7 +17,7 @@
     <li><p><a class="links" routerLink="/messages">Messages</a></p></li>
   </ul>
   <ul>
-    <li><i class="fas fa-cog"></i><p><a class="links" routerLink="/help">Settings</a></p></li>
+    <li><i class="fas fa-cog"></i><p><a class="links" routerLink="/help">Help</a></p></li>
     <li><i class="fas fa-chevron-circle-left"></i><p><a class="links" routerLink="/login"><b>Log Out</b></a></p></li>
     <br>
   </ul>
