--- a/Scholarship (Firebase)/src/app/layout/applications/applications.component.scss
+++ b/Scholarship (Firebase)/src/app/layout/applications/applications.component.scss
@@ -42,6 +42,7 @@ h1 {
     color: #e3486c;
     border-radius: 30px;
     padding-top: 4px;
+    margin-top: 10px;
     margin-right: 15px;
       transition: transform 0.5s ease; /* Add a smooth transition effect */
             animation: slideIn 0.5s ease; /* Use the slideIn animation */
