--- a/Scholarship (Firebase)/src/app/homepage/homepage.component.html
+++ b/Scholarship (Firebase)/src/app/homepage/homepage.component.html
@@ -23,7 +23,7 @@
             <p class="scholarshiptext">Level-Up</p>
             <p class="findertxt">Scholarships</p>
             <p class="title-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem explicabo vero consectetur veritatis nulla necessitatibus ipsam aliquid a ipsum perspiciatis amet animi </p>
-            <button class="find" onclick="window.location.href='/login'">Find Scholarships</button>
+            <button class="find" onclick="window.location.href='/apply'">Find Scholarships</button>
         </div>
     </div> 
 </body>
